# -3D-Simulation-for-Training-Autonomous-Drones

./: LICENSE  README.md
config/: slam.yaml  waypoints.yaml
config  /: training_missions.yaml
core_navigation/: altitude_hold_controller.py  drone_waypoint_trainer.py  mission_planner.py  path_optimiser.py
docs/: Project_documentation.md
drone_metrics_/: metric_report.py  session_logger.py
drone_navigation/: session_manager.py  waypoint_navigator.py
drone_simulation/worlds/: training_world.sdf
environment_simulation  /: wind_disturbance.py
launch_config  /: drone_training.launch.py  drone_world.launch.py
mapping/: coverage_analyser.py  occupancy_mapper.py
monitoring_logging /: battery_monitor.py  metrics_collector.py  performance_logger.py  visualisation_publisher.py
perception/: Obstacle_avoidance.py  gate_detector.py  landing_pad_detector.py  yolo_detector.py
ppackage_meta /: package.xml
reinforcement_learning /: q_learning_agent.py  reward_calculator.py  rl_trainer.py
state_estimation/: drone_estimator.py  sensor_fusion.py
state_estimation /: sensor_fusion.py
world_models /: drone_inspection_arena.sdf
